--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "crisshipped",
   "version": "1.0.0",
   "description": "Project Two",
   "main": "server.js",
@@ -13,8 +13,17 @@
   "dependencies": {
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "http-errors": "^1.7.3",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.5.5",
+    "morgan": "^1.10.0",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
@@ -25,6 +34,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "nodemon": "^2.0.2"
   }
 }
