--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-paginate": "^1.0.0",
+    "express-session": "^1.17.0",
+    "forms": "^1.3.1",
     "mysql2": "^1.7.0",
     "sequelize": "^5.8.6",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
