--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "handlebars": "^4.5.0",
     "mocha": "^6.1.4",
-    "prettier": "^1.17.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prettier": "^1.17.1"
   }
 }
