modified app name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crisshipped",
+  "name": "crishipped",
   "version": "1.0.0",
   "description": "Project Two",
   "main": "server.js",
