--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-paginate": "^1.0.0",
     "express-session": "^1.17.0",
     "forms": "^1.3.1",
+    "handlebars-layouts": "^3.1.4",
     "mysql2": "^1.7.0",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.5.1",
