--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-flash": "0.0.2",
@@ -24,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
