--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "axios": "^0.19.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-flash": "0.0.2",
     "express-handlebars": "^3.1.0",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.17.0",
+    "forms": "^1.3.1",
+    "handlebars-layouts": "^3.1.4",
     "http-errors": "^1.7.3",
     "method-override": "^3.0.0",
     "mongodb": "^3.5.5",
@@ -26,7 +30,9 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "sequelize": "^5.8.6"
+    "sequelize": "^5.8.6",
+    "sequelize-cli": "^5.5.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
