--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "rootpass",
     "database": "crishipped_db",
     "host": "localhost",
     "port": 3306,
