--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "forms": "^1.3.1",
     "handlebars-layouts": "^3.1.4",
     "http-errors": "^1.7.3",
+    "lodash.startcase": "^4.4.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
