--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
     "mysql2": "^1.7.0",
+    "nunjucks": "^3.2.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
