--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "consolidate": "^0.15.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-flash": "0.0.2",
