--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "request": "^2.88.2",
     "sequelize": "^5.8.6",
     "sequelize-cli": "^5.5.1",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
