--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "express-session": "^1.17.0",
     "forms": "^1.3.1",
     "handlebars-layouts": "^3.1.4",
+    "handlebars-paginate": "^0.1.0",
     "http-errors": "^1.7.3",
     "lodash.startcase": "^4.4.0",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.5.5",
     "morgan": "^1.10.0",
     "mysql2": "^1.7.0",
